--- a/TranslationMod/languages/RU/dictionaries/Game1.json
+++ b/TranslationMod/languages/RU/dictionaries/Game1.json
@@ -13,11 +13,11 @@
     "Stardew Valley has crashed...":"",
     "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)":"",
     "Dwarf King":"",
-    "Mr. Lewis":"",
+    "Mr. Lewis": "Мр. Льюис",
     "How much do you want to bet? (You have @number club coins).":"",
     "Semitones above C3:":"",
     "Drum Sound:":"",
-    "Choose song: ":"",
+    "Choose song: ": "Выберите песню: ",
     "How many units of fuel do you want to buy?":"",
     "How many would you like?":"",
     "How many would you like to buy?":"",
@@ -29,23 +29,25 @@
     "The @key has begun at the beach.":"",
     "It's getting late...":"",
     "I'm not thirsty right now...":"",
-    "I'm too full...":"",
-    "__comment":"spouse speaks:",
+    "I'm too full...": "Больше нет мест...",
+    "__comment": "spouse speaks:",
     "The wedding was wonderful... wasn't it, dear?$h#$e#Well, we can't forget about the farm... time to get to work.":"",
-    "Drink this @key?":"",
-    "Drink a @key?":"",
-    "Eat this @key?":"",
-    "Eat a @key?":"",
+    "Drink this @key?": "Выпить @keyR?",
+    "Drink a @key?": "Выпить @keyR?",
+    "Drink an @key?": "Выпить @keyR?",
+    "Eat this @key?": "Съесть @keyR?",
+    "Eat a @key?": "Съесть @keyR?",
+    "Eat an @key?": "Съесть @keyR?",
     "Nothing happens. Sandy said something about 'infusing it with the power of Yoba'.":"",
     "Place anything you want to sell in here.":"",
     "Empty the contents of your backpack into the shipping box?":"",
-    "Sun":"",
-    "Mon":"",
-    "Tue":"",
-    "Wed":"",
-    "Thu":"",
-    "Fri":"",
-    "Sat":"",
+    "Sun": "Вс",
+    "Mon": "Пн",
+    "Tue": "Вт",
+    "Wed": "Ср",
+    "Thu": "Чт",
+    "Fri": "Пт",
+    "Sat": "Сб",
     "Sunday":"",
     "Monday":"",
     "Tuesday":"",
@@ -54,7 +56,7 @@
     "Friday":"",
     "Saturday":"",
     "You have @number club coins.":"",
-    "Play Again":"", 
+    "Play Again": "Играть снова",
     "Leave":"",
     "JACKPOT WINNER!! You win @number Club Coins.":"",
     " You win @number Club Coins.":"",
@@ -62,23 +64,25 @@
     "Gamepad mode activated":"",
     "Gamepad disconnected":"",
     "Screenshot mode activated. Press 'F4' to exit.":"",
+    "Next stop: Stardew Valley.": "Следующая остановка: Долина Стардью.",
+    "Next stop: Calico Desert.": "Следующая остановка: Пустыня Калико.",
     "...@player?":"",
     "__comment":"donnow if it used or not",
     "X or Left Click - Advance Dialogue":"",
-    "X or Left Click - Select":"",
+    "X or Left Click - Select": "X или ЛКМ - Выбрать",
     "C or Right Click - Cancel":"",
-    "X or Left Click - Grab | Use":"",
-    " @newline C or Right Click - Use @key":"",
+    "X or Left Click - Grab | Use": "X или ЛКМ - Взять | Использовать",
+    " @newline C or Right Click - Use @key": "C или ПКМ - Использовать @key",
     " @newline E, F, or Mouse Mid. - Remove Item From Backpack":"",
     " @newline Q or Enter - Open Menu":"",
     " @newline Shift - Run/Walk":"",
-    "X or Left Click - Drop Item":"",
-    " @newline C or Right Click - Use Item":"",
+    "X or Left Click - Drop Item": "X или ЛКМ - Выбросить предмет",
+    " @newline C or Right Click - Use Item": "C или ПКМ - Использовать предмет",
     " @newline E, F or Mouse Mid. - Store Item":"",
     " @newline Z or Mouse Wheel - Switch Item":"",
-    " @newline Q or Enter - Open Menu":"",
-    " @newline Shift - Run/Walk":"",
-    "Today's festival is being set up. Come back later.":"",
+    " @newline Q or Enter - Open Menu": "Q или Enter - Открыть меню",
+    " @newline Shift - Run/Walk": "Shift - Бежать/Ходить",
+    "Today's festival is being set up. Come back later.": "Сегодняшний праздник еще готовится. Возвращайся позже",
 	"__comment":"key is server name, no need to translate",
     "Connecting to @key...": "",
     "Melting Winter Snow...":""
