--- a/TranslationMod/languages/RU/dictionaries/Locations.json
+++ b/TranslationMod/languages/RU/dictionaries/Locations.json
@@ -15,7 +15,7 @@
 	"@number/30 Duggies^":"",
 	"@number Dust Sprites *^":"",
 	"@number/500 Dust Sprites^":"",
-	"^  -See Gil to claim your rewards.":"",
+	"^  -See Gil to claim your rewards.": "^  -За наградой обращайтесь к Гилу.",
 	"...*snore*...":"",
 	"...Come back when you've got something to show me, kid":"",
 	"Use 300 pieces of wood to fix the bridge?":"",
@@ -55,7 +55,7 @@
 	"Man: Arghh!! Take this and leave me alone, you hooligan!":"",
 	"Received 1g.":"",
 	"Man: ...":"",
-	"Driver: Hey, you'd better take a seat.":"",
+	"Driver: Hey, you'd better take a seat.": "Водитель: Эй, лучше поскорее займи место",
 	"Occupied":"",
 	"Oooo... My feet hurt from all that shopping.":"",
 	"Hey. Could you ask the driver how long it'll be until we get to Stardew?":"",
@@ -80,24 +80,24 @@
 	"Your loyal horse waits patiently for your return.":"",
 	"Now I'm angry!":"",
 	"You little punk...":"",
-	"We are the Junimos... Keepers of the forest.":"",
-	"This house was empty for years... The trees moved in and so did we.":"",
-	"We're happy to help... It's not our house, after all.":"",
+	"We are the Junimos... Keepers of the forest.": "Мы Junimos... Хранители леса.",
+	"This house was empty for years... The trees moved in and so did we.": "Этот дом был пуст в течение многих лет... деревья пришли в движение и мы тоже.",
+	"We're happy to help... It's not our house, after all.": "Мы будем рады помочь... это не наш дом, в конце концов.",
 	"So many wonderful bundles... thank you! Thank you!":"",
-	"When we're done here, we'll return to the other world.":"",
+	"When we're done here, we'll return to the other world.": "Когда мы закончим здесь, мы вернемся в иной мир.",
 	"The last bundle... Farewell... @player.":"",
-	"The @key has been restored!":"",
-	"The Junimos have returned to the spirit world.":"",
+	"The @key has been restored!": "@key восстановлен!",
+	"The Junimos have returned to the spirit world.": "Junimos вернулись в духовный мир.",
 	"Return to Stardew Valley?":"",
 	"You've got a bunch of your stuff blocking the kitchen... I guess you're not getting dinner tonight.":"",
-	"Aiii!":"",
-	"What the...?":"",
+	"Aiii!": "Аййй!",
+	"What the...?": "Что за...?",
 	"Ahh!!":"",
-	"Die!!":"",
+	"Die!!": "Умри!!",
 	"Get out!":"",
 	"Yuck!":"",
 	"Take that!":"",
-	"Help!":"",
+	"Help!": "Помогите!",
 	"Get your sword!":"",
 	"Agh!":"",
 	"Gahh!":"",
@@ -105,7 +105,7 @@
 	"It's locked. You can hear someone inside, though.":"",
 	"You unlock the sewer hatch with the Rusty Key!":"",
 	"It's locked...":"Закрыто...",
-	"It looks abandoned...":"",
+	"It looks abandoned...": "Выглядит заброшенным...",
 	"If you become a Joja Member, the community center will become a Joja Warehouse, and you will no longer be able to refurbish it. However, Joja will provide an alternative means to improving the town. Are you sure you want to join?":"",
 	"Excellent! Welcome to Joja Corporation! Come back tomorrow and we can see about getting started on some community development projects... Oh, and don't forget your wallet! Hehe.#$b#Now, let me call Mayor Lewis and see about gutting that nasty old community center...":"",
 	"Come back tomorrow and we can see about getting some community improvements started... Just make sure to bring a lot of money. Hehe.":"",
@@ -127,7 +127,7 @@
 	"There's a shaft leading down.":"",
 	"Jump In":"",
 	"Leave the mine":"",
-	"Adventurer's Guild":"",
+	"Adventurer's Guild": "Гильдия авантюристов",
 	"Proven adventurers only.":"",
 	"Hello":"",
 	"A train is passing through Stardew Valley":"",
@@ -176,8 +176,8 @@
 	"The other day I bought @key @key at Pierre's. It was perfect on a bed of greens and a dash of my 'special' vinaigrette.":"",
 	"The other day I bought a fresh @key at Pierre's. It was perfect on a bed of greens and a dash of my 'special' vinaigrette.":"",
 	"It's just the back of Lewis' old pickup truck...":"",
-	"Choose destination:":"",
-	"Out of Business.":"",
+	"Choose destination:": "Выберите назначение.",
+	"Out of Business.": "Банкротство.",
 	"Eww... What are you doing?$s":"",
 	"Um... Why are you digging in the trash?$s":"",
 	"Hey, Stop that! ...Yuck!$s":"",
