--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -2,33 +2,33 @@
     "__comment": "Menus/AboutMenu.cs",
     "Created by ": "Разработан",
     "__comment": "Menus/AnimalQueryMenu.cs",
-    "Home changed": "",
+    "Home changed": "Дом изменен",
     "That Building Is Full": "",
-    "That Is My Home": "",
+    "That Is My Home": "Это мой дом",
     "@key Can't Live There.": "",
-    "Sell for @number g": "",
-    "Change Home Building": "",
-    "Allow Pregnancy": "",
+    "Sell for @numberg": "Продать за @numberg",
+    "Change Home Building": "Переместить дом",
+    "Allow Pregnancy": "Разрешить беременность",
     "Age: @number month": "",
     "Age: @number months": "",
     "Age: @number month (Baby)": "",
     "Age: @number months (Baby)": "",
     "Parent: @key": "",
-    "Are you sure?": "",
+    "Are you sure?": "Вы уверены?",
     "Please choose a @keyV for your @keyR": "",
     "__comment": "Menus/Billboard.cs",
     "@key's Birthday": "День рождения @keyR",
     "@key' Birthday": "День рождения @keyR",
-    "Nothing is posted today.": "",
-    "Accept Quest": "",
+    "Nothing is posted today.": "Сегодня нет объявлений.",
+    "Accept Quest": "Принять задание",
     "__comment": "Menus/BlueprintsMenu.cs",
-    "Not Enough Resources": "",
+    "Not Enough Resources": "Не хватает ресурсов",
     "Incorrect Building Type": "",
     "Can Only Place Outside On Farm": "",
-    "Can't Build There": "",
-    "Fullness:": "",
-    "Happy:": "",
-    "Perfect!": "",
+    "Can't Build There": "Не может быть построено здесь",
+    "Fullness:": "Сытость:",
+    "Happy:": "Счастье:",
+    "Perfect!": "Замечательно!",
     "@key Bundle": "",
     "Must be deposited at Community Center": "",
     "Can't demolish during construction": "",
@@ -40,8 +40,8 @@
     "Select a @key to upgrade. Choose a structure to demolish": "",
     "Select a @key to upgrade. Choose a location": "",
     "Only the farm owner can demolish.": "",
-    "Someone's in there!": "",
-    "You can't build that in this location.": "",
+    "Someone's in there!": "Там кто-то есть!",
+    "You can't build that in this location.": "Вы не можете строить на этом месте.",
     " Invalid Command ::": "",
     " Invalid Command Arguments ::": "",
     "Summer (The Sun Can Bend An Orange Sky)": "",
@@ -68,17 +68,17 @@
     "Social": "Общение",
     "Map": "Карта",
     "Crafting": "Ремесло",
-    "Collections": "Коллекция",
+    "Collections": "Коллекции",
     "Options": "Настройки",
-    "Exit Game": "Выход",
+    "Exit Game": "Выйти из игры",
     "Farmer's Catalogue": "Фермерский каталог",
-    "You don't have enough room in your inventory.": "",
-    "The price is 25g per geode... @newline @newline It looks you can't afford it right now.": "",
+    "You don't have enough room in your inventory.": "Нет места в инвентаре",
+    "The price is 25g per geode...@newline@newlineIt looks you can't afford it right now.": "Цена: 25g за геод...@newline@newlineПохоже сейчас ты не можешь себе это позволить.",
     "Just place your geodes on my anvil and I'll give them a whack. @newline @newlineThe price is 25g per geode.": "",
     "@number-@number Damage": "",
     "+ @number @key": "",
     "@number @key": "",
-    "Requires @key @newline  @key": "Требуется @key @newline  @key",
+    "Requires @key@newline @key": "Требуется @key@newline @key",
     "@farm Farm": "@farm Ферма",
     "Current Funds: @numberg": "Текущие средства: @numberg",
     "Total Earnings: @numberg": "Всего заработано: @numberg",
@@ -88,6 +88,7 @@
     "Repairs the broken bridge in the mountains.": "",
     "Repairs the old ruins on the farm, turning it into a greenhouse.": "",
     "Removes the glimmering boulder near the mine entrance.": "",
+    "Reward:": "Награда:",
     "Reward": "Награда",
     "We    the  Junimo are    happy to    aid  you.  In     return we     ask for gifts   of      the valley.    If you   are one     with    forest   magic    then you    will   see    the true    nature   of  this scroll.": "",
     "Reward: @key": "Награда: @key",
@@ -126,21 +127,21 @@
     "Location of forageable items revealed.": "",
     "+1 ore per vein.": "",
     "Chance for gems to appear in pairs.": "",
-    "Metal bars worth 25% more.": "",
+    "Metal bars worth 25% more.": "Металлические слитки стоят на 25% дороже.",
     "Chance to find coal doubled.": "",
     "Chance to find geodes doubled.": "",
     "Gems worth 30% more.": "",
     "All attacks deal 10% more damage.": "",
     "+15 HP.": "",
-    "Critical strike chance increased by 50%.": "",
-    "Deal 15% more damage.": "",
+    "Critical strike chance increased by 50%.": "Критический удар повышен на 50%.",
+    "Deal 15% more damage.": "Наносится на 15% больше урона.",
     "+25 HP.": "",
     "Cooldown on special moves cut in half.": "",
     "Critical strikes are deadly.": "",
-    "Choose a profession:": "",
+    "Choose a profession:": "Выберите профессию:",
     "New cooking recipe: @key": "",
     "New crafting recipe: @key": "",
-    "No Saved Games Found": "",
+    "No Saved Games Found": "Сохраненные игры не найдены",
     "Really delete file: @key?": "",
     "Name": "Имя",
     "Farm@newlineName": "Название@newlineФермы",
@@ -149,6 +150,8 @@
     "Animal@newlinePreference": "Предпочит@newlineЖивотных",
     "Cat": "Кошка",
     "Dog": "Собака",
+    "dog": "собака",
+    "cat": "кошка",
     "Male": "Мужчина",
     "Female": "Женщина",
     "Skin": "Кожа",
@@ -159,45 +162,54 @@
     "Pants Color:": "Цвет брюк",
     "Skip Intro": "Пропуск интро",
     "Acc.": "Аксс.",
-    "Calico Desert": "",
-    "Backwoods": "",
-    "Bus Stop": "",
+    "Calico Desert": "Пустыня Калико",
     "Wizard's Tower": "",
-    "Marnie's Ranch @newline Open 9:00AM to 4:00PM most days": "Ранчо Марни @newline Открыто с 9:00AM до 4:00PM большиство дней",
+    "Underground Mine": "Шахта",
+    "Desert": "Пустыня",
+    "Bus Stop": "Автобусная остановка",
+    "Forest": "Лес",
+    "Town": "Город",
+    "Mountain": "Горы",
+    "Backwoods": "Лесная глушь",
+    "Railroad": "Железная дорога",
+    "Beach": "Пляж",
+    "Woods": "Лесная роща",
+    "Sewer": "Канализация",
+    "Marnie's Ranch@newlineOpen 9:00AM to 4:00PM most days": "Ранчо Марни@newlineОткрыто с 9:00AM до 4:00PM большиство дней",
     "Leah's Cottage": "",
-    "1 Willow Lane @newline Home of Jodi, Kent & Sam": "",
-    "2 Willow Lane @newline Home of Emily & Haley": "",
+    "1 Willow Lane@newlineHome of Jodi, Kent & Sam": "",
+    "2 Willow Lane@newlineHome of Emily & Haley": "",
     "Town Square": "",
-    "Harvey's Clinic @newline Open 9:00AM to 3:00PM": "",
-    "Pierre's General Store @newline Home of Pierre, Caroline & Abigail @newline Open 9:00AM to 6:00PM (Closed Wednesday)": "",
-    "Blacksmith @newline Open 9:00AM to 4:00PM": "",
-    "Saloon @newline Open 12:00PM To 12:00AM": "",
-    "Mayor's Manor": "",
-    "Stardew Valley Museum & Library @newline Open 8:00AM to 6:00PM": "",
+    "Harvey's Clinic@newlineOpen 9:00AM to 3:00PM": "Клиника Харви@newlineОткрыто с 9:00AM до 3:00PM",
+    "Pierre's General Store@newlineHome of Pierre, Caroline & Abigail@newlineOpen 9:00AM to 6:00PM (Closed Wednesday)": "Универмаг Пьера@newlineДом Пьера, Кэролайн и Эбигейл@newlineОткрыто с 9:00AM до 6:00PM (Закрыто по Средам)",
+    "Blacksmith@newlineOpen 9:00AM to 4:00PM": "",
+    "Saloon@newlineOpen 12:00PM To 12:00AM": "",
+    "Mayor's Manor": "Поместье Мэра",
+    "Stardew Valley Museum & Library@newlineOpen 8:00AM to 6:00PM": "Музей и библиотека Стардью Вэлли@newlineОткрыто с 8:00AM до 6:00PM",
     "Elliott's Cabin": "",
     "Sewer": "",
     "Graveyard": "",
     "Trailer": "",
-    "1 River Road @newline Home of George, Evelyn & Alex": "",
-    "Carpenter's Shop @newline Home of Robin, Demetrius, Sebastian & Maru @newline Shop open 9:00AM to 5:00PM most days": "",
+    "1 River Road@newlineHome of George, Evelyn & Alex": "",
+    "Carpenter's Shop@newlineHome of Robin, Demetrius, Sebastian & Maru@newlineShop open 9:00AM to 5:00PM most days": "Столярный цех@newlineДом Робин, Деметрия, Себастьяна и Мару@newlineМагазин открыт с 9:00AM до 5:00PM, почти все дни",
     "Tent": "",
     "Mines": "",
-    "Adventurer's Guild @newline Open 2:00PM to 10:00PM": "",
+    "Adventurer's Guild@newlineOpen 2:00PM to 10:00PM": "Гильдия приключенцев@newlineОткрыто с 2:00AM до 10:00PM",
     "Quarry": "",
-    "JojaMart @newline Open 9:00AM to 11:00PM": "",
-    "Fish Shop @newline Open 9:00AM to 5:00PM": "",
+    "JojaMart@newlineOpen 9:00AM to 11:00PM": "JojaMart@newlineОткрыто с 9:00AM до 11:00PM",
+    "Fish Shop@newlineOpen 9:00AM to 5:00PM": "Рыбный Магазин@newlineОткрыто с 9:00AM до 5:00PM",
     "Spa @newline Open all day": "",
-    "Secret Woods": "",
-    "Ruined House": "",
-    "Community Center": "",
-    "Sewer Pipe": "",
-    "Railroad": "",
-    "Lonely Stone": "",
-    "New Reward!": "",
-    "Press new key...": "",
-    "Key already in use. Try again...": "",
+    "Secret Woods": "Таинственный лес",
+    "Ruined House": "Разрушенный дом",
+    "Community Center": "Общественный центр",
+    "Sewer Pipe": "Канализационная труба",
+    "Railroad": "Железная дорога",
+    "Lonely Stone": "Одинокий Камень",
+    "New Reward!": "Новая награда!",
+    "Press new key...": "Нажмите любую кнопку...",
+    "Key already in use. Try again...": "Эта кнопка уже занята. Попробуйте еще раз...",
     "General:": "Общие",
-    "Auto Run": "Автобег",
+    "Auto Run": "Авто Бег",
     "Show Portraits": "Показывать портреты",
     "Show Merchant Portraits": "Показывать портреты торговцев",
     "Always Show Tool Hit Location": "Показывать область взаимодействия",
@@ -254,16 +266,15 @@
     "Adults can be shorn for wool. Sheep who form a close bond with their owners can grow wool faster. A pair of shears is required to harvest the wool. @newline Lives in the barn.": "",
     "Livestock:": "",
     "Choose a @key for your new @key": "",
-    "Name your new animal: ": "",
+    "Name your new animal: ": "Назовите своё животное: ",
     "Truffle Pig": "",
     "Your progress has been saved.": "Ваш прогресс сохранён.",
     "Saving...": "Сохранение...",
     "Done": "Готово",
-    "@number of @key, Year @number": "@number день @keyR, Год @number",
     "Have a look at my wares.": "",
     "Need some construction supplies? Or are you looking to re-decorate?": "",
     "I have a rotating selection of hand-made furniture.": "",
-    "I've got some great furniture for sale.": "",
+    "I've got some great furniture for sale.": "У меня есть хорошая мебель на продажу.",
     "Got any spare construction material to sell?": "",
     "I've got @key that would look just @key in your house.": "",
     "Too lazy to mine your own ore? No problem.": "",
@@ -278,9 +289,9 @@
     "What can I get for you?": "",
     "I carry only the finest goods.": "",
     "I've got quality goods for sale.": "",
-    "Looking to buy something?": "",
+    "Looking to buy something?": "Хотите что-нибудь купить?",
     "The season's almost over. I'll be changing stock tomorrow.": "",
-    "Buy something?": "",
+    "Buy something?": "Покупаете что-то?",
     "Hiyo, poke. Did you bring coins? Gud. Me sell hats.": "",
     "Rare Goods": "",
     "I've got a little bit of everything. Take a look!": "",
@@ -300,27 +311,20 @@
     "Slay any monsters? I'll buy the loot.": "",
     "The caves can be dangerous. How do you think I lost this eye?": "",
     "You won't find these goods anywhere else!": "",
-    "I've got just what you need.": "",
+    "I've got just what you need.": "У меня есть то, что тебе нужно: ",
     "Out of stock": "",
     "Dwarvish Translation Guide": "",
     "Rusty Key": "",
     "Club Card": "",
     "Special Charm": "",
     "Skull Key": "",
-    "+@number Hoe Efficiency @newline +@number Water Can Efficiency": "",
-    "+@number Fishing Rod Efficiency": "",
-    "+@number Axe Efficiency": "",
-    "+@number Pickaxe Efficiency": "",
-    "+@number Health": "+@number Здоровья",
-    "+@number Energy": "+@number Энергии",
-    "0 Health": "0 Здоровья",
-    "0 Energy": "0 Энергии",
-    "-@number Hoe Efficiency @newline -@number Water Can Efficiency": "",
-    "-@number Fishing Rod Efficiency": "",
-    "-@number Axe Efficiency": "",
-    "-@number Pickaxe Efficiency": "",
-    "-@number Health": "-@number Здоровья",
-    "-@number Energy": "-@number Энергии",
+    "@number Hoe Efficiency @newline +@number Water Can Efficiency": "",
+    "@number Fishing Rod Efficiency": "",
+    "@number Axe Efficiency": "",
+    "@number Pickaxe Efficiency": "",
+    "@number Health": "@number Здоровья",
+    "@number Energy": "@number Энергии",
+    
     "Wallet": "Бумажник",
     "HA! Now that's what I like to see! Here, have a star token.": "",
     "Strength Level: @key": "",
@@ -330,11 +334,11 @@
     "You've started the game 10,000 times! I'm impressed. -Ape": "",
     "Welcome back!": "",
     "Plug in an Xbox One or Xbox 360 controller to activate game pad mode.": "",
-    "Tip: Giving gifts is a good way to make friends with the residents of Stardew Valley.": "",
+    "Tip: Giving gifts is a good way to make friends with the residents of Stardew Valley.": "Подсказка: Дарите подарки жителям Долины Стардью ,это хороший способ, чтобы подружиться с ними.",
     "Tip: Shift-click to purchase 5 items at a time.": "",
-    "After upgrading your hoe or watering can, hold down the tool button to increase the area of effect!": "",
+    "After upgrading your hoe or watering can, hold down the tool button to increase the area of effect!": "После улучшения мотыги или лейки, удерживая кнопку инструмента, чтобы увеличить область применения!",
     "Tip: Right-click to use a weapon's special move.": "",
-    "Watch TV shows to learn useful tips, cooking recipes, and more!": "",
+    "Watch TV shows to learn useful tips, cooking recipes, and more!": "Смотрите шоу по ТВ, чтобы узнать полезные советы, новые рецепты, и многое другое!",
     "The traveling merchant visits Stardew Valley once a week. She sells a wide variety of goods, often at exorbitant prices!": "",
     "Thanks for playing!": "",
     "Elliott's latest sentence: @newline The @key @key @key @key the other @key": "",
