--- a/TranslationMod/languages/RU/dictionaries/Object.cs.json
+++ b/TranslationMod/languages/RU/dictionaries/Object.cs.json
@@ -1,35 +1,20 @@
 {
 
+    "@key x @number":"@key x @number",
+    "@key@newline@newline@key@newline@newline@key": "@key@newline@newline@key@newline@newline@key",
 
-"It's locked... (Open @numberam - @numberpm)": "Закрыто... (Открыто с @numberam до @numberpm)",
-"It's locked... (Open @numberpm - @numberam)": "Закрыто... (Открыто с @numberpm до @numberam)",
-
-      "You're not good enough friends with @key to enter his bedroom.":"Вы недостаточно хорошие друзья с @keyT чтобы войти в его спальню.",
-      "You're not good enough friends with @key to enter her bedroom.":"Вы недостаточно хорошие друзья с @keyT чтобы войти в её спальню.",
-      "You're not good enough friends with @key or @key to enter their bedroom.":"Вы недостаточно хорошие друзья с @keyT и @keyT чтобы войти в их спальню.",
-      "You've already given @key a gift today.":"Сегодня вы уже дарили @keyD подарок.",
-      "You've already given @key 2 gifts this week! That's enough.":"На этой неделе вы подарили @keyD 2 подарка! Этого достаточно.",
-      
-      "@key x @number":"@key x @number",
-      "Eat this @key?":"Съесть @keyR?",
-
-      "@key@newline@newline@key@newline@newline@key":"@key@newline@newline@key@newline@newline@key",
-
-      "Gamepad mode activated":"Режим геймпада активирован",
-      "Use in the water to catch fish.":"Используйте на водоёмах, чтобы ловить рыбу.",
+    "Use in the water to catch fish.":"Используйте на водоёмах, чтобы ловить рыбу.",
       
     "Length:":"Длина:",
     "@numberin.":"@numberд.",
     "@number in.":"@number д.",
     
-    "Year @number":"Год @number",
-
-  "__comment":"AnimalHouse.cs",
-      "Remove the egg?":"Убрать яйцо?",
-      "A new baby chick hatched!":"Вылупился циплёнок!",
-      "A new chick hatched... It looks odd.":"Вылупился циплёнок... Выглядит странно.",
-      "A new baby duckling hatched!":"Вылупился утёнок!",
-      "A new baby ...lizard?... hatched.":"Вылупилась ...ящерка?...",
+"__comment":"AnimalHouse.cs",
+    "Remove the egg?":"Убрать яйцо?",
+    "A new baby chick hatched!":"Вылупился циплёнок!",
+    "A new chick hatched... It looks odd.":"Вылупился циплёнок... Выглядит странно.",
+    "A new baby duckling hatched!":"Вылупился утёнок!",
+    "A new baby ...lizard?... hatched.":"Вылупилась ...ящерка?...",
 
   "__comment":"BarnDweller.cs",
       "@key is looking happy today!":"@key сегодня выглядит счастливо!",
@@ -52,7 +37,7 @@
       "Yoba's Blessing@newlineInvincible":"",
       "Adrenaline Rush@newline+2 Speed":"",
       "Oil of Garlic@newlineYour skin exudes a pungent aroma":"",
-        "__comment":"+1 Defense",
+    "__comment":"+1 Defense",
       "+@number @key":"+@number @key",
       "Magnetic Radius":"Магнитный Радиус",
       "Source: @key":"Источник: @key",
@@ -417,5 +402,6 @@
       "I think I'll write in my diary tonight...@newline@newline-@key @number-@newlineI've been spending a lot of time with @key lately...":"Гровер",
       "...We're becoming good friends. I hope things stay that way.":"", 
       "...I like him more than just a friend.":"", 
-      "...I like her more than just a friend.":""
+      "...I like her more than just a friend.":"",
+      "(Write Nothing)": "(Ничего не писать)"
 }
