--- a/TranslationMod/languages/RU/dictionaries/Object.json
+++ b/TranslationMod/languages/RU/dictionaries/Object.json
@@ -1,48 +1,48 @@
 {
 	"Footwear":"",
-	"@key @newline @newline Level @number":"",
+	"@key@newline@newlineLevel @number":"",
 	"Monster in a box!":"",
 	"Inventory Full":"",
-	"Can be placed inside your house.":"",
-	"Must be placed on wall":"",
-	"Furniture can't be placed here":"",
-	"Can't place on wall":"",
-	"Can't place on top of a person.":"",
-	"Can only be placed in House":"",
+	"Can be placed inside your house.": "Может быть размещено внутри вашего дома.",
+	"Must be placed on wall": "Должно быть повешено на стену.",
+	"Furniture can't be placed here": "Мебель не может быть размещена здесь",
+	"Can't place on wall": "Нельзя вешать на стену.",
+	"Can't place on top of a person.":"Нельзя разместить поверх персонажа",
+	"Can only be placed in House":"Можно разместить только внутри Дома",
 	"Under a piece of wood, you found a @key! You're not sure what it's for, but it seems important. It's been added to your wallet.":"",
 	"You've found the @key! You're not sure what it's for, but it seems important. It's been added to your wallet.":"",
 	"You got the @key! Your inventory space has increased to @number.":"",
-	"Weather Report":"",
+	"Weather Report": "Прогноз погоды",
 	"Fortune Teller":"",
 	"Livin' Off The Land":"",
 	"The Queen Of Sauce":"",
 	"The Queen Of Sauce (Re-run)":"",
-	"(Leave)":"",
-	"Select channel:":"",
+	"(Leave)": "(Выключить)",
+	"Select channel:": "Выбрать канал:",
 	"Welcome to \"Livin' Off The Land\". We're back again with another tip for y'all. Now listen up:":"",
-	"Greetings! It is I, the queen of sauce... here to teach you a new mouth-watering recipe from my secret cookbook. This week's dish...":"",
-	"Ah... I sense that a new viewer has joined us. A young man from... Stardew Valley? Welcome, welcome!":"",
-	"Ah... I sense that a new viewer has joined us. A young lady from... Stardew Valley? Welcome, welcome!":"",
-	"Ah... yes, I can hear the spirits whispering something to me... ":"",
+	"Greetings! It is I, the queen of sauce... here to teach you a new mouth-watering recipe from my secret cookbook. This week's dish...": "Приветствую! С вами королева соусов! И я готова поделиться новым аппетитным рецептом из моей личной кулинарной книги. Блюдо этой недели...",
+	"Ah... I sense that a new viewer has joined us. A young man from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это юноша  из... долины Стардью? Милости просим!",
+	"Ah... I sense that a new viewer has joined us. A young lady from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это девушка из... долины Стардью? Милости просим!",
+	"Ah... yes, I can hear the spirits whispering something to me... ": "Да... да, духи шепчут мне нечто важное...",
 	"Welcome back to 'Welwick's Oracle'... If you seek hidden knowledge of the future, well you've come to the right place.":"",
 	"Hoo.. I see a glimmer within my scrying orb... A shard of knowledge from the future!":"",
 	"Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.":"",
 	"Welcome to KOZU 5... your number one source for weather, news, and entertainment.^And now, the weather forecast for tomorrow...":"",
 	"You already know how to cook @key.":"Вы уже умеете готовить @key.",
 	"You learned how to cook '@key'!":"Вы научились готовить '@key'!",
-	"It's going to be clear and sunny all day.":"Весь день должно быть ясно и солнечно.",
-	"It's going to be a beautiful, sunny day tomorrow!":"Завтра должен быть прекрасный, солнечный день!",
+	"It's going to be clear and sunny all day.": "Небо будет чистым, а день ясным и солнечным.",
+	"It's going to be a beautiful, sunny day tomorrow!": "На завтра ожидается прекрасная солнечная погода!",
 	"It's going to rain all day tomorrow.":"Завтра должен быть дождь.",
 	"Partially cloudy with a light breeze. Expect lots of pollen!":"",
 	"It's going to snow all day. Make sure you bundle up, folks!":"",
 	"It's going to be cloudy, with gusts of wind throughout the day.":"",
 	"Looks like a storm is approaching. Thunder and lightning is expected.":"",
-	"Um... that's odd. My information sheet just says 'null'. This is embarrassing... ":"",
+	"Um... that's odd. My information sheet just says 'null'. This is embarrassing... ": "Эм... странно. В моей справке указано 'null'. Как неловко... ",
 	"It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in Pelican Town, starting between @key and @key. Don't be late!":"Завтра будет ясно и солнечно... идельная погода для @key! Событие будет проходить в Пеликан Тауне, Начало между @key и @key. Не опазыдывайте!",
 	"It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place on the beach, starting between @key and @key. Don't be late!":"Завтра будет ясно и солнечно... идельная погода для @key! Событие будет проходить на пляже, Начало между @key и @key. Не опазыдывайте!",
 	"It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in the forest, starting between @key and @key. Don't be late!":"Завтра будет ясно и солнечно... идельная погода для @key! Событие будет проходить в лесу, Начало между @key и @key. Не опазыдывайте!",
 	"Expect a few inches of snow tomorrow.":"",
-	"Bundle up, folks. It's going to snow tomorrow!":"",
+	"Bundle up, folks. It's going to snow tomorrow!": "Одевайтесь теплее, друзья: завтра будет снегопад!",
 	"The spirits feel neutral today. The day is in your hands.":"",
 	"The spirits are in good humor today. I think you'll have a little extra luck.":"",
 	"The spirits are very happy today! They will do their best to shower everyone with good fortune.":"",
