--- a/TranslationMod/languages/RU/dictionaries/MiniGames.json
+++ b/TranslationMod/languages/RU/dictionaries/MiniGames.json
@@ -1,53 +1,69 @@
 {
-	"Game Over":"Конец игры",
-	"Restart":"Рестарт",
-	"Quit":"Выход",
-	"> Restart":"> Рестарт",
-	"> Quit":"> Выход",
-	"Here they come!":"",
-	"Half-way done!":"",
-	"Hey! We did it!":"",
-	"Urghh...":"",
-	"Nooo!":"",
-	"Hit":"",
-	"Stand":"",
-	"Double Or Nothing":"",
-	"New Game":"",
-	"Dealer: @number":"",
-	"Bet:@number":"",
-	"Result: -@number":"",
-	"You Win!":"",
-	"That's a CalicoJack!":"",
-	"You Lose":"",
-	"Bust!":"",
-	"Dealer busts!":"",
-	"No Winner":"",
-	"Dealer's closer to 21":"",
-	"Closer to 21":"",
-	"You finished the Scenario with @key '@key' rating":"",
-	"Time: @number":"",
-	"Score: @number":"",
-	"Fish Caught: @number":"",
-	"No Perfection Bonus":"",
-	"@key Perfection Bonus!":"",
-	"No Reward... Try Harder":"",
-	"Reward: @nuber Star Tokens":"",
-	"...and for my very special grandson:":"",
-	"...and for my very special granddaughter:":"",
-	"I want you to have this sealed envelope.":"",
-	"No, no, don't open it yet... have patience.":"",
-	"Now, listen close...":"",
-	"There will come a day when you feel crushed by the burden of modern life...":"",
-	"...and your bright spirit will fade before a growing emptiness.":"",
-	"When that happens, my boy, you'll be ready for this gift.":"",
-	"When that happens, my dear, you'll be ready for this gift.":"",
-	"Now, let Grandpa rest...":"",
-	"XX Years later":"",
-	"Dear @player,^^If you're reading this, you must be in dire need of a change.^^The same thing happened to me, long ago. I'd lost sight of what mattered most in life... real connections with other people and nature. So I dropped everything and moved to the place I truly belong.^^^I've enclosed the deed to that place... my pride and joy: @farm Farm. It's located in Stardew Valley, on the southern coast. It's the perfect place to start your new life.^^This was my most precious gift of all, and now it's yours. I know you'll honor the family name, my boy. Good luck.^^Love, Grandpa^^P.S. If Lewis is still alive say hi to the old guy for me, will ya?":"",
-	"Dear @player,^^If you're reading this, you must be in dire need of a change.^^The same thing happened to me, long ago. I'd lost sight of what mattered most in life... real connections with other people and nature. So I dropped everything and moved to the place I truly belong.^^^I've enclosed the deed to that place... my pride and joy: @farm Farm. It's located in Stardew Valley, on the southern coast. It's the perfect place to start your new life.^^This was my most precious gift of all, and now it's yours. I know you'll honor the family name, my dear. Good luck.^^Love, Grandpa^^P.S. If Lewis is still alive say hi to the old guy for me, will ya?":"",
-	"You beat Junimo Kart! ":"",
-	"Ow... that hurt.":"",
-	"No Accuracy Bonus":"",
-	"x@number Accuracy Multiplier!":"",
-	"No Reward... Try Harder":""
+	"Game Over": "Конец игры",
+	"Restart": "Заново",
+	"Quit": "Выйти",
+	"> Restart": "> Рестарт",
+	"> Quit": "> Выход",
+	"Here they come!": "Вот они!",
+	"Half-way done!": "Почти прошли!",
+	"Hey! We did it!": "Йей! Получилось!",
+	"Urghh...": "Пф-ф-ф...",
+	"Nooo!": "Нееет!",
+	"Hit": "Удар",
+	"Stand": "",
+	"Double Or Nothing": "",
+	"New Game": "Новая Игра",
+	"Dealer: @number": "",
+	"Bet:@number": "",
+	"Result: @number": "Итог: @number",
+	"Results: @number": "Итоги: @number",
+	"You Win!": "Вы выиграли!",
+	"That's a CalicoJack!": "Это CalicoJack!",
+	"You Lose": "",
+	"Bust!": "",
+	"Dealer busts!": "",
+	"No Winner": "",
+	"Dealer's closer to 21": "",
+	"Closer to 21": "",
+	"You finished the Scenario with @key '@key' rating.": "",
+	"Time: @number": "",
+	"Score: @number": "",
+	"Fish Caught: @number": "",
+	"No Perfection Bonus": "",
+	"@key Perfection Bonus!": "",
+	"No Reward... Try Harder": "",
+	"Reward: @nuber Star Tokens": "",
+	"...and for my very special grandson:": "...и для моего очень особенного внука:",
+	"...and for my very special granddaughter:": "...и для моей очень особенной внучки:",
+	"I want you to have this sealed envelope.": "Я хочу дать тебе этот запечатанный конверт.",
+	"No, no, don't open it yet... have patience.": "Нет, нет, не открывай его пока... потерпи.",
+	"Now, listen close...": "Теперь, слушай внимательно...",
+	"There will come a day when you feel crushed by the burden of modern life...": "Однажды ты почувствуешь себя разбитым бременем современной жизни...^Однажды ты почувствуешь себя разбитой бременем современной жизни...",
+	"...and your bright spirit will fade before a growing emptiness.": "...и твой яркий дух начнёт угасать перед растущей пустотой.",
+	"When that happens, my boy, you'll be ready for this gift.": "Когда это случится, мой мальчик, ты будешь готов к этому подарку.",
+	"When that happens, my dear, you'll be ready for this gift.": "Когда это случится, моя милая, ты будешь готов к этому подарку.",
+	"Now, let Grandpa rest...": "А пока, дай Дедушке отдохнуть...",
+	"XX Years later": "XX лет спустя",
+
+
+	"Dear @player,^^If you're reading this, you must be in dire need of a change.^^The same thing happened to me, long ago. I'd lost sight of what mattered most in life... real connections with other people and nature. So I dropped everything and moved to the place I truly belong.^^^":
+	"Дорогой @player,^^Если ты читаешь это, ты должно быть остро нуждаешься в переменах.^^Тоже самое случилось и со мной, очень давно. Я упустил из виду то, что важнее всего в жизни... настоящую связь с другими людьми и природой. Так что я все бросил и переехал в место, где я буду действительно \\своим\\.^^^",
+
+	"I've enclosed the deed to that place... my pride and joy: @farm Farm. It's located in Stardew Valley, on the southern coast. It's the perfect place to start your new life.^^This was my most precious gift of all, and now it's yours. I know you'll honor the family name, my boy. Good luck.^^Love, Grandpa^^":
+	"Я приложил к письму документы на то место... моей гордости и радости: @farm Ферме. Она находиться в Стардью Вэлли, на южном побережье. Это отличное место чтобы начать новую жизнь.^^Это был мой самый драгоценный подарок, и теперь он твой. Я знаю ты последуешь семейной традиции, мой мальчик. Удачи.^^С любовью, твой Дедушка^^",
+	"I've enclosed the deed to that place... my pride and joy: @farm Farm. It's located in Stardew Valley, on the southern coast. It's the perfect place to start your new life.^^This was my most precious gift of all, and now it's yours. I know you'll honor the family name, my boy. Good luck.^^Love, Grandpa^^":
+	"Я приложил к письму документы на то место... моей гордости и радости: @farm Ферме. Она находиться в Стардью Вэлли, на южном побережье. Это отличное место чтобы начать новую жизнь.^^Это был мой самый драгоценный подарок, и теперь он твой. Я знаю ты последуешь семейной традиции, моя дорогая. Удачи.^^С любовью, твой Дедушка^^",
+
+	"P.S. If Lewis is still alive say hi to the old guy for me, will ya?":"P.S. Если Льюис еще жив, передай привет этому старику от меня, хорошо?",
+
+	"Dear @player,^^If you're reading this, you must be in dire need of a change.^^The same thing happened to me, long ago. I'd lost sight of what mattered most in life... real connections with other people and nature. So I dropped everything and moved to the place I truly belong.^^^I've enclosed the deed to that place... my pride and joy: @farm Farm. It's located in Stardew Valley, on the southern coast. It's the perfect place to start your new life.^^This was my most precious gift of all, and now it's yours. I know you'll honor the family name, my boy. Good luck.^^Love, Grandpa^^P.S. If Lewis is still alive say hi to the old guy for me, will ya?": 
+	"Дорогой @player,^^Если ты читаешь это, ты должно быть остро нуждаешься в переменах.^^Тоже самое случилось и со мной, очень давно. Я упустил из виду то, что важнее всего в жизни... настоящую связь с другими людьми и природой. Так что я все бросил и переехал в место, где я буду действительно \\своим\\.^^^Я приложил к письму документы на то место... моей гордости и радости: @farm Ферме. Она находиться в Стардью Вэлли, на южном побережье. Это отличное место чтобы начать новую жизнь.^^Это был мой самый драгоценный подарок, и теперь он твой. Я знаю ты последуешь семейной традиции, мой мальчик. Удачи.^^С любовью, твой Дедушка^^P.S. Если Льюис еще жив, передай привет этому старику от меня, хорошо?",
+	"Dear @player,^^If you're reading this, you must be in dire need of a change.^^The same thing happened to me, long ago. I'd lost sight of what mattered most in life... real connections with other people and nature. So I dropped everything and moved to the place I truly belong.^^^I've enclosed the deed to that place... my pride and joy: @farm Farm. It's located in Stardew Valley, on the southern coast. It's the perfect place to start your new life.^^This was my most precious gift of all, and now it's yours. I know you'll honor the family name, my dear. Good luck.^^Love, Grandpa^^P.S. If Lewis is still alive say hi to the old guy for me, will ya?": 
+	"Дорогая @player,^^Если ты читаешь это, ты должно быть остро нуждаешься в переменах.^^Тоже самое случилось и со мной, очень давно. Я упустил из виду то, что важнее всего в жизни... настоящую связь с другими людьми и природой. Так что я все бросил и переехал в место, где я буду действительно \\своим\\.^^^Я приложил к письму документы на то место... моей гордости и радости: @farm Ферме. Она находиться в Стардью Вэлли, на южном побережье. Это отличное место чтобы начать новую жизнь.^^Это был мой самый драгоценный подарок, и теперь он твой. Я знаю ты последуешь семейной традиции, моя дорогая. Удачи.^^С любовью, твой Дедушка^^P.S. Если Льюис еще жив, передай привет этому старику от меня, хорошо?",
+
+	"You beat Junimo Kart! ": "",
+	"Ow... that hurt.": "Оу... это больно.",
+	"No Accuracy Bonus": "",
+	"x@number Accuracy Multiplier!": "",
+	"No Reward... Try Harder": ""
 }
